--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
