--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "@google/generative-ai": "^0.21.0",
     "@speechly/react-client": "^2.2.4",
     "axios": "^1.7.9",
@@ -16,10 +17,14 @@
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "font-awesome": "^4.7.0",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
+    "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
     "next": "^15.0.4",
+    "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
+    "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
