--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
