--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "fhirclient": "^2.5.4",
     "font-awesome": "^4.7.0",
     "formidable": "^3.5.2",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
-    "next": "^15.0.4",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
