--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@google-cloud/storage": "^7.14.0",
     "@google/generative-ai": "^0.21.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@react-google-maps/api": "^2.20.5",
     "@speechly/react-client": "^2.2.4",
     "axios": "^1.7.9",
@@ -18,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "date-fns": "^4.1.0",
     "fhirclient": "^2.5.4",
     "font-awesome": "^4.7.0",
     "formidable": "^3.5.2",
@@ -35,6 +41,7 @@
     "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
