--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formidable": "^3.5.2",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
+    "groq-sdk": "^0.12.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
@@ -38,6 +39,8 @@
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
+    "openai": "^4.78.1",
+    "pdf-parse": "^1.1.1",
     "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
