--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
