--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "boxicons": "^2.1.4",
     "buffer": "^6.0.3",
     "canvas": "^3.0.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "express": "^4.21.2",
     "fhirclient": "^2.5.4",
     "font-awesome": "^4.7.0",
     "formidable": "^3.5.2",
@@ -52,8 +54,12 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
+    "react-player": "^2.16.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "zego-express-engine-webrtc": "^3.7.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
