--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^7.23.6",
     "@react-google-maps/api": "^2.20.5",
     "@speechly/react-client": "^2.2.4",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.11",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -39,7 +40,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
-    "next": "^15.1.3",
+    "next": "^15.1.5",
     "next-auth": "^4.24.11",
     "next-connect": "^1.0.0",
     "nodemailer": "^6.9.16",
@@ -59,7 +60,9 @@
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "zego-express-engine-webrtc": "^3.7.4"
+    "uuid": "^11.0.5",
+    "zego-express-engine-webrtc": "^3.7.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -70,6 +73,7 @@
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
